src/objects/Sales_Model__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Model_Description__c</fullName>
        <description>From MotoPDM field</description>
        <inlineHelpText>From MotoPDM field</inlineHelpText>
        <label>Sales Model Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Model_External_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Field visible to admins only</inlineHelpText>
        <label>Sales Model External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Model_Item_State__c</fullName>
        <inlineHelpText>Item State in MOTOPDM. Data is pulled every 5 minutes</inlineHelpText>
        <label>Sales Model Item State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <label>Segment Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_SW_Kits_on_Sales_Model__c</fullName>
        <label># of Devices on Sales Model</label>
        <summaryForeignKey>SalesModel_Device__c.Sales_Model__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sales Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Model_Description__c</columns>
        <columns>Sales_Model_Item_State__c</columns>
        <columns>Segment_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>